<resources>
    <string name="app_name">SqliteLoginDemo</string>
    <string name="SignUp">SignUp</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Adventure">Adventure</string>
    <string name="Gym">Gym</string>
    <string name="Dance">Dance</string>
    <string name="Signing">Signing</string>
    <string name="password">Password</string>
    <string name="signUpBtn">SignUp</string>
    <string name="Already">Already have account ? Log In</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="LoginBtn">Login</string>
    <string name="Donot">Don\'t have account ? SignUp</string>
    <string name="phone">Phone No</string>

    <string name="add">Add Contact</string>
    <string name="view">View Contact</string>
    <string name="update">Update Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="addNewContact">Add New Contact</string>
    <string name="contactID">Contact ID</string>
    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="helloworld">Hello World....</string>
    <string name="updateContact">Update Contact</string>
    <string name="Update">Update</string>
    <string name="deleteContact">Delete Contact</string>
    <string name="deletebtn">Delete</string>
    <string name="id">ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneNo">PhoneNo</string>
    <string name="gender">Gender</string>
</resources>
