<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateContact"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:padding="15dp"/>
        <EditText
            android:id="@+id/fragment_update_contactEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactID"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/fragment_update_nameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/fragment_update_lastNameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/fragment_update_emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/fragment_update_phoneNoEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNo"
            android:maxLength="10"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <RadioGroup
            android:id="@+id/fragment_update_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fragment_update_maleRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/fragment_update_femaleRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/fragment_update_updateBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Update"/>
    </LinearLayout>


</RelativeLayout>