<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:layout_margin="1dp"
    app:cardPreventCornerOverlap="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:id="@+id/custom_layout_idTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_margin="2dp"/>
    <TextView
        android:id="@+id/custom_layout_nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="2dp"/>



    <TextView
        android:id="@+id/custom_layout_emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_margin="2dp"/>
    <TextView
        android:id="@+id/custom_layout_phoneTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneNo"
        android:layout_margin="2dp"/>


</LinearLayout>
</android.support.v7.widget.CardView>